- Prevent hiding all rows/columns (#483630)
- Add a lot of QWhatsThis help to various dialogs
- Handbook update for some dialogs
- Implement move sheets
- Fix date (and time) increment for autofill (#117252)
- Always allow date input in ISO 8601 format, regardless of local settings (#50192)
- Fix cell protection (#116444)

Some important developer visible changes:
- Decouple KSpread::Cell and KSpread::Format (association instead of inheritance)
- Provide setter and getter methods for KSpread::Point

since 1.4.1
===========
- Fix slow scrolling left/right (#110551, #101234)

since 1.4.0
===========
- Fix potential crash when rendering obscured cells (#108659)
- Don't automatically make cells left aligned when increasing indent.

since 1.4-beta1
===============
- Use General/Blank Worksheet as default template.
- KSpread crashes on exit if there is a chart in the sheet (#101915).
- The data editor is disabled for charts which has been loaded.
- Don't use 600 dpi as default resolution (the chart printing is much faster now).
- The chart/object printing is simplified and works correctly now. Unfortunately
  this breaks the transform feature but the ordinary rectangle printing is more
  important.
- Paint the child document after it has been inserted.

since 1.3
=========

- fix bug #63332: Pasting into a cell that has spilled out, pastes
  into all overwritten cells
- fix bug #101926: kspread never prints the grid
- Implement save/load Oasis format
- Allow to sort without respect case
- allow editing/removing of links
- fixed bug 76861: bad rendering of hyperlink
- Validation: allow to display or not message
- Add new dcop function
- Start to port KSpread_undo to kcommand
- Add combobox to search area name
- Add Help Message as in oocalc
- multiple steps undo and redo
- fix problem where hidden sheet is simply appended in the tab bar
  (when it is shown again).
- fix bug #81026: SUMIF() function added
- sheet layout direction can be explicitly set (fix bug #46831)